fix(popup): layout overflow-y

--- a/packages/popup/src/index.scss
+++ b/packages/popup/src/index.scss
@@ -1,11 +1,19 @@
+html,
+body,
+#root {
+  height: 100%;
+}
+
 body {
   margin: 0;
   min-height: 292px; // helps with flashing between tab changes
 }
 
 #root {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  overflow-y: auto;
   padding: 1rem;
 }
 
